# Habit-Tracker

./: .env.example  .gitignore  README.md  SETUP.md  debug_ollama.py  docker-compose.yml  pyproject.toml  seed_test_data.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_personalization.py  0003_analytics.py
src/: __main__.py
src/application/dto/: analytics_dtos.py  dtos.py
src/application/interfaces/: ai_services.py  external.py
src/application/use_cases/: archive_expired_goals.py  archive_habit.py  burnout.py  coach_reply.py  complete_habit.py  create_habit.py  extract_habits.py  generate_insights.py  get_today_progress.py  mood.py  onboarding.py  process_voice.py  register_user.py  send_reminders.py  update_habit.py  voice_value_parser.py
src/domain/entities/: achievement.py  coach_message.py  habit.py  habit_log.py  mood_entry.py  user.py
src/domain/repositories/: habit_repository.py  other_repositories.py  user_repository.py
src/domain/services/: achievements_catalog.py  analytics_service.py  burnout_detector.py  gamification.py
src/domain/value_objects/: category.py  coaching_mode.py  frequency.py  motivation_style.py  priority_focus.py  risk_level.py  streak.py
src/infrastructure/: config.py  container.py
src/infrastructure/database/: database.py
src/infrastructure/export/: report_exporter.py
src/infrastructure/llm/: gemini_coach.py  gemini_extractor.py  graceful_coach.py  groq_coach.py  (+5 more)
tests/: conftest.py
tests/integration/: test_analytics_features.py  test_extract_habits.py  test_habit_repo.py  test_new_features.py
(+34 files in other folders)
